--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <div class="container">
+      <div class="container mx-auto px-6">
         <h1>Brasil API CEP v2</h1>
         <p>
           Versão 2 do serviço de busca por CEP com múltiplos providers de
@@ -21,7 +21,7 @@
       </div>
     </header>
     <main>
-      <div class="container">
+      <div class="container mx-auto px-6">
         <form onsubmit="onFormSubmit">
           <label for="cep">
             Informe seu CEP
