--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       rel="stylesheet"
     />
   </head>
-  <body>
-    <header>
+  <body class="bg-gray-50">
+    <header class="bg-white">
       <div class="container mx-auto px-6">
         <h1>Brasil API CEP v2</h1>
         <p>
