--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   </head>
   <body class="bg-gray-50">
     <header class="bg-white">
-      <div class="container mx-auto px-6">
+      <div class="container mx-auto px-6 py-2">
         <h1>Brasil API CEP v2</h1>
-        <p>
+        <p class="mt-1">
           Versão 2 do serviço de busca por CEP com múltiplos providers de
           fallback.
         </p>
