--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <body class="bg-gray-50">
     <header class="bg-white">
       <div class="container mx-auto px-6 py-2">
-        <h1>Brasil API CEP v2</h1>
-        <p class="mt-1">
+        <h1 class="text-xl">Brasil API CEP v2</h1>
+        <p class="mt-1 text-sm">
           Versão 2 do serviço de busca por CEP com múltiplos providers de
           fallback.
         </p>
