--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
     </header>
     <main>
-      <div class="container mx-auto px-6">
+      <div class="container mx-auto px-6 py-6">
         <form onsubmit="onFormSubmit">
           <label for="cep">
             Informe seu CEP
