--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               inputmode="numeric"
             />
           </label>
-          <button>Enviar</button>
+          <button class="mt-6 py-2 px-6 bg-blue-500">Enviar</button>
         </form>
       </div>
     </main>
