--- a/index.html
+++ b/index.html
@@ -5,85 +5,166 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brasil API CEP v2</title>
+    <meta name="description" content="Consultar CEP usando a Brasil API" />
+    <meta name="keywords" content="consultar cep javascript js" />
     <link
       href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
       rel="stylesheet"
     />
   </head>
   <body class="bg-gray-100">
-    <header>
-      <div class="container mx-auto px-6 py-12 pb-8">
-        <h1 class="text-2xl">Brasil API – CEP v2</h1>
-        <p class="mt-1 text-sm opacity-60">
+    <header class="mt-12">
+      <div class="container max-w-screen-md mx-auto px-6 py-8">
+        <h1 class="text-3xl">Brasil API – CEP (v2)</h1>
+        <p class="mt-3 text-lg opacity-60">
           Versão 2 do serviço de busca por CEP com múltiplos providers de
           fallback.
         </p>
       </div>
     </header>
     <main>
-      <div class="container mx-auto px-6 py-8">
-        <form class="grid grid-cols-2 gap-2" onsubmit="onFormSubmit">
-          <label for="cep">
-            <span class="text-xs opacity-60">Informe o seu CEP</span>
-            <input
-              name="postal-code"
-              type="text"
-              class="w-full mt-1 py-2 px-4 rounded-lg"
-              autocomplete="postal-code"
-              inputmode="numeric"
-              placeholder="41760000"
-              pattern=".{8,8}"
-              maxlength="8"
-              required
-            />
-          </label>
-          <label for="cep">
-            <span class="text-xs opacity-60">Rua</span>
-            <input
-              name="street-address"
-              type="text"
-              class="w-full mt-1 py-2 px-4 rounded-lg"
-              autocomplete="street-address"
-              autocapitalize="words"
-              placeholder="Digite aqui"
-              pattern=".{8,8}"
-              maxlength="8"
-              required
-            />
-          </label>
-          <label for="cep">
-            <span class="text-xs opacity-60">Número</span>
-            <input
-              name="street-number"
-              type="text"
-              class="w-full mt-1 py-2 px-4 rounded-lg"
-              autocomplete="address-line3"
-              inputmode="numeric"
-              placeholder="1234"
-              pattern="[0-9]"
-              maxlength="8"
-              required
-            />
-          </label>
-          <label for="cep">
-            <span class="text-xs opacity-60">Bairro</span>
-            <input
-              name="neighborhood"
-              type="text"
-              class="w-full mt-1 py-2 px-4 rounded-lg"
-              autocomplete="address-line2"
-              autocapitalize="words"
-              placeholder="Digite aqui"
-              required
-            />
-          </label>
-          <button class="py-2 px-4 bg-blue-500 text-white rounded-lg self-end">
-            Enviar
-          </button>
+      <div class="container max-w-screen-md mx-auto px-6 py-8">
+        <form name="form-address">
+          <div class="grid grid-cols-2 gap-y-4 gap-x-8">
+            <label class="relative" for="postalCode">
+              <span class="text-xs opacity-40 absolute left-4 top-3">CEP</span>
+              <input
+                id="postalCode"
+                name="postalCode"
+                type="text"
+                class="w-full pb-2 pt-7 px-4 rounded-lg border border-gray-300"
+                autocomplete="postal-code"
+                inputmode="numeric"
+                placeholder="Ex: 41760000"
+                pattern=".{8,9}"
+                maxlength="9"
+                required
+              />
+            </label>
+            <div></div>
+            <label class="relative" for="streetAddress">
+              <span class="text-xs opacity-40 absolute left-4 top-3">Rua</span>
+              <input
+                id="streetAddress"
+                name="streetAddress"
+                type="text"
+                class="w-full pb-2 pt-7 px-4 rounded-lg border border-gray-300"
+                autocomplete="street-address"
+                autocapitalize="words"
+                placeholder="Digite aqui"
+                required
+              />
+            </label>
+            <label class="relative" for="streetNumber">
+              <span class="text-xs opacity-40 absolute left-4 top-3">
+                Número
+              </span>
+              <input
+                id="streetNumber"
+                name="streetNumber"
+                type="text"
+                class="w-full pb-2 pt-7 px-4 rounded-lg border border-gray-300"
+                autocomplete="address-line2"
+                inputmode="numeric"
+                placeholder="Digite aqui"
+                pattern="\d*"
+              />
+            </label>
+            <label class="relative" for="complement">
+              <span class="text-xs opacity-40 absolute left-4 top-3">
+                Complemento
+              </span>
+              <input
+                id="complement"
+                name="complement"
+                type="text"
+                class="w-full pb-2 pt-7 px-4 rounded-lg border border-gray-300"
+                autocomplete="address-line3"
+                inputmode="numeric"
+                placeholder="Digite aqui"
+                pattern="[0-9]"
+              />
+            </label>
+            <label class="relative" for="neighborhood">
+              <span class="text-xs opacity-40 absolute left-4 top-3">
+                Bairro
+              </span>
+              <input
+                id="neighborhood"
+                name="neighborhood"
+                type="text"
+                class="w-full pb-2 pt-7 px-4 rounded-lg border border-gray-300"
+                autocomplete="address-line3"
+                autocapitalize="words"
+                placeholder="Digite aqui"
+                required
+              />
+            </label>
+            <label class="relative" for="city">
+              <span class="text-xs opacity-40 absolute left-4 top-3">
+                Cidade
+              </span>
+              <input
+                id="city"
+                name="city"
+                type="text"
+                class="w-full pb-2 pt-7 px-4 rounded-lg border border-gray-300"
+                autocomplete="address-level2"
+                autocapitalize="words"
+                placeholder="Digite aqui"
+                required
+              />
+            </label>
+            <label class="relative" for="state">
+              <span class="text-xs opacity-40 absolute left-4 top-3">
+                Estado
+              </span>
+              <input
+                id="state"
+                name="state"
+                type="text"
+                class="w-full pb-2 pt-7 px-4 rounded-lg border border-gray-300"
+                autocomplete="address-level1"
+                autocapitalize="words"
+                placeholder="Digite aqui"
+                required
+              />
+            </label>
+          </div>
+
+          <div class="grid grid-cols-2 gap-8 mt-8">
+            <button
+              class="
+                py-3
+                px-12
+                bg-gray-100
+                text-blue-500
+                rounded-lg
+                border-0 border-blue-500
+                bg-blue-100
+              "
+              type="reset"
+            >
+              Reset
+            </button>
+            <button
+              class="
+                py-3
+                px-12
+                bg-blue-500
+                border-0 border-blue-500
+                text-white
+                rounded-lg
+              "
+              type="submit"
+            >
+              Enviar
+            </button>
+          </div>
         </form>
       </div>
     </main>
 
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
