--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    <!-- AdSense -->
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4790959957287215"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body class="bg-gray-100">
     <header class="mt-12">
@@ -163,6 +169,8 @@
           </div>
         </form>
       </div>
+
+      <aside></aside>
     </main>
 
     <script src="index.js" type="module"></script>
